# MultiworldGG

./: .gitignore  AP_18704076118733518816_P2_Ness.apeb  AP_32991928255872424345_P1_Player1.apz2  AP_32991928255872424345_P2_Player2.apz2  AP_37669129613354681862_P1_Pink.apz2  AdventureClient.py  BaseClasses.py  ChecksFinderClient.py  ClientBuilder.py  ClientState.py  CommonClient.py  FF1Client.py  Fill.py  Generate.py  KH1Client.py  Launcher.py  LinksAwakeningClient.py  LttPAdjuster.py  MMBN3Client.py  Main.py  MinecraftClient.py  ModuleUpdate.py  MultiServer.py  MultiWorld.py  NetUtils.py  OoTAdjuster.py  OoTClient.py  PLUGIN_SYSTEM_README.md  Plugin.py  README.md  SNIClient.py  TWWClient.py  UndertaleClient.py  Updater.py  Utils.py  WargrooveClient.py  WebHost.py  Zelda1Client.py  add_igdb_ids.py  all_world_inits.txt  (+24 more)
.github/: dmg_settings.py  pyright-config.json
WebHostLib/: __init__.py  customserver.py  downloads.py  generate.py  lttpsprites.py  misc.py  options.py  tracker.py  upload.py
client/: AdventureClient.py  BizHawkClient.py  ChecksFinderClient.py  CommonClient.py  FF1Client.py  KH1Client.py  KH2Client.py  Launcher.py  MMBN3Client.py  MinecraftClient.py  OoTClient.py  SNIClient.py  UndertaleClient.py  Zelda1Client.py  __init__.py
data/: client.kv  game_index.py  options.yaml
docs/: CODEOWNERS  adding games.md  apworld specification.md  apworld_dev_faq.md  combined_license_inno.txt  contributing.md  entrance randomization.md  network protocol.md  options api.md  running from source.md  settings api.md  tests.md  webhost configuration sample.yaml  world api.md  world maintainer.md  world_standardization_design.md
gui/: Gui.py  aaaaaah.py  (+15 more)
worlds/adventure/: Constants.py  Register.py  __init__.py  pyproject.toml
worlds/adventure/docs/: en_Adventure.md  setup_en.md  setup_fr.md
worlds/against_the_storm/: Constants.py  Items.py  Locations.py  Options.py  Recipes.py  Register.py  __init__.py  pyproject.toml
worlds/against_the_storm/docs/: en_Against_The_Storm.md  setup_en.md
worlds/ahit/: Client.py  Constants.py  Options.py  Register.py  __init__.py  pyproject.toml
worlds/ahit/docs/: setup_en.md
worlds/albw/: Client.py  Constants.py  Options.py  Patch.py  README.md  Register.py  __init__.py  pyproject.toml
worlds/albw/docs/: setup_en.md
worlds/alttp/: Constants.py  EntranceRandomizer.py  ItemPool.py  Register.py  Rom.py  Rules.py  __init__.py  pyproject.toml
worlds/alttp/docs/: multiworld_en.md  multiworld_es.md  multiworld_fr.md
worlds/animal_well/: Constants.py  Register.py  __init__.py  items.py  options.py  pyproject.toml  region_data.py  region_scripts.py
worlds/animal_well/client/: bean_patcher.py  client.py  logic_tracker.py
worlds/animal_well/docs/: en_ANIMAL WELL.md  setup_en.md
worlds/animal_well/test/: __init__.py  test_access.py
worlds/apeescape/: Client.py  Constants.py  Items.py  Locations.py  Options.py  RAMAddress.py  Regions.py  Register.py  Rules.py  SpecialItems.py  Strings.py  Traps.py  __init__.py  pyproject.toml
worlds/apeescape/docs/: en_Ape Escape.md  setup_en.md  setup_fr.md
worlds/apeescape/test/: __init__.py
worlds/apsudoku/: Constants.py  Register.py  __init__.py  pyproject.toml
worlds/aquaria/: Constants.py  Register.py  __init__.py  pyproject.toml
worlds/aquaria/docs/: setup_en.md  setup_fr.md
worlds/archipidle/: Constants.py  Register.py  __init__.py  pyproject.toml
worlds/aus/: Constants.py  Register.py  __init__.py  pyproject.toml
worlds/aus/docs/: en_An Untitled Story.md  setup_en.md
worlds/balatro/: Constants.py  Register.py  __init__.py  pyproject.toml
worlds/balatro/docs/: setup_en.md
worlds/banjo_tooie/: BTClient.py  Constants.py  Options.py  Regions.py  Register.py  __init__.py  pyproject.toml
worlds/banjo_tooie/docs/: en_Banjo-Tooie.md  fr_Banjo-Tooie.md  setup_en.md  setup_fr.md
worlds/blasphemous/: Constants.py  Register.py  __init__.py  pyproject.toml
worlds/blasphemous/docs/: setup_en.md
worlds/bomb_rush_cyberfunk/: Constants.py  Register.py  __init__.py  pyproject.toml
worlds/bomb_rush_cyberfunk/docs/: setup_en.md
worlds/brotato/: Register.py  __init__.py  constants.py  item_weights.py  items.py  locations.py  loot_crates.py  options.py  pyproject.toml
worlds/brotato/docs/: en_Brotato.md  setup_en.md
worlds/bumpstik/: Constants.py  Register.py  __init__.py  pyproject.toml
worlds/bumpstik/docs/: en_Bumper Stickers.md  setup_en.md
worlds/candybox2/: Constants.py  Register.py  __init__.py  pyproject.toml
worlds/candybox2/docs/: guide_en.md
worlds/cat_quest/: Cat Quest.yaml  Constants.py  Register.py  __init__.py  pyproject.toml
worlds/celeste/: Constants.py  Register.py  __init__.py  pyproject.toml
worlds/celeste/docs/: celeste_en.md
worlds/celeste64/: Constants.py  Register.py  __init__.py  pyproject.toml
worlds/celeste64/docs/: guide_en.md
worlds/chainedechoes/: Constants.py  Locations.py  Register.py  __init__.py  pyproject.toml
worlds/chainedechoes/docs/: en_Chained Echoes.md  setup_en.md
worlds/chatipelago/: Constants.py  Register.py  __init__.py  pyproject.toml
worlds/chatipelago/docs/: en_Chatipelago.md  setup_en.md
worlds/checksfinder/: Constants.py  Register.py  __init__.py  pyproject.toml
worlds/checksfinder/docs/: setup_en.md
worlds/civ_6/: Constants.py  Container.py  Register.py  __init__.py  pyproject.toml
worlds/civ_6/data/: boosts.py
worlds/civ_6/docs/: en_Civilization VI.md  setup_en.md
worlds/clique/: Constants.py  Register.py  __init__.py  pyproject.toml
worlds/crosscode/: Constants.py  Register.py  locations.py  options.py  pyproject.toml  world.py
worlds/crosscode/docs/: en_CrossCode.md  setup_en.md
worlds/crosscode/types/: pools.py
worlds/ctjot/: Constants.py  Items.py  Locations.py  Register.py  __init__.py  pyproject.toml
worlds/ctjot/docs/: multiworld_en.md
worlds/cuphead/: Constants.py  README.md  Register.py  __init__.py  pyproject.toml
worlds/cv64/: Constants.py  Register.py  __init__.py  aesthetics.py  pyproject.toml  rom.py
worlds/cv64/docs/: en_Castlevania 64.md  setup_en.md
(+1868 files in other folders)
