[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "adventure"
dynamic = ["version"]
description = "Adventure"
authors = [
    {name = "JusticePS"}
]
license = "MIT"
license_files = [
    "LICENSE"
]
classifiers = [
    "Private :: Do Not Upload"
]
requires-python = ">=3.12"

[project.entry-points."mwgg.plugins"]
"adventure.WorldClass" = "adventure.Register:WORLD_CLASS"
"adventure.WebWorldClass" = "adventure.Register:WEB_WORLD_CLASS"
"adventure.Client" = "adventure.Register:CLIENT_FUNCTION"

[tool.setuptools.dynamic]
version = {attr = "adventure.Register:VERSION"}
