[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "adventure"
dynamic = ["version"]
description = "MultiWorld: Adventure"
authors = [
    {name = "JusticePS"}
]
classifiers = [
    "Private :: Do Not Upload"
]
requires-python = ">=3.12"

[project.entry-points."mwgg.plugins"]
"adventure.WorldClass" = "adventure.Register:WORLD_CLASS"
"adventure.WebWorldClass" = "adventure.Register:WEB_WORLD_CLASS"
"adventure.Client" = "adventure.Register:CLIENT_FUNCTION"

[tool.setuptools.packages.find]
where = ["."]
include = ["adventure*", "adventure"]
exclude = ["*test*", "test*"]
namespaces = false

[tool.setuptools.dynamic]
version = {attr = "adventure.Constants.VERSION"}
