[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ahit"
dynamic = ["version"]
description = "A Hat in Time"
authors = [
    {name = "CookieCat45"}
]
license = "MIT"
license_files = [
    "LICENSE"
]
classifiers = [
    "Private :: Do Not Upload"
]
requires-python = ">=3.12"

[project.entry-points."mwgg.plugins"]
"ahit.WorldClass" = "ahit.Register:WORLD_CLASS"
"ahit.WebWorldClass" = "ahit.Register:WEB_WORLD_CLASS"
"ahit.Client" = "ahit.Register:CLIENT_FUNCTION"

[tool.setuptools.dynamic]
version = {attr = "ahit.Register:VERSION"}
