[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "albw"
dynamic = ["version"]
description = "MultiWorld: A Link Between Worlds"
authors = [
    {name = "randomsalience"}
]
license = "GPL-2.0-only"
license-files = [
    "LICENSE"
]
classifiers = [
    "Private :: Do Not Upload"
]
requires-python = ">=3.12"

[project.entry-points."mwgg.plugins"]
"albw.WorldClass" = "albw.Register:WORLD_CLASS"
"albw.WebWorldClass" = "albw.Register:WEB_WORLD_CLASS"
"albw.Client" = "albw.Register:CLIENT_FUNCTION"

[tool.setuptools.packages.find]
where = ["."]
include = ["albw*", "albw"]
exclude = ["test*", "*test*"]
namespaces = false

[tool.setuptools.dynamic]
version = {attr = "albw.Constants.VERSION"}
