[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "alttp"
dynamic = ["version"]
description = "A Link to the Past"
authors = [
    {name = "Berserker66"}
]
license = "MIT"
license_files = [
    "LICENSE"
]
classifiers = [
    "Private :: Do Not Upload"
]
requires-python = ">=3.12"

dependencies = [
    "maseya-z3pr>=1.0.0rc1",
    "xxtea>=3.0.0",
]

[project.entry-points."mwgg.plugins"]
"alttp.WorldClass" = "alttp.Register:WORLD_CLASS"
"alttp.WebWorldClass" = "alttp.Register:WEB_WORLD_CLASS"
"alttp.Client" = "alttp.Register:CLIENT_FUNCTION"

[tool.setuptools.packages.find]
where = ["."]
include = ["alttp*", "alttp"]
exclude = ["*test*", "test*"]
namespaces = false

[tool.setuptools.dynamic]
version = {attr = "alttp.Constants.VERSION"}
