[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "apeescape"
dynamic = ["version"]
description = "Ape Escape"
authors = [
    {name = "Thedragon005"}
]
license = "MIT"
license_files = [
    "LICENSE"
]
classifiers = [
    "Private :: Do Not Upload"
]
requires-python = ">=3.12"

[project.entry-points."mwgg.plugins"]
"apeescape.WorldClass" = "apeescape.Register:WORLD_CLASS"
"apeescape.WebWorldClass" = "apeescape.Register:WEB_WORLD_CLASS"
"apeescape.Client" = "apeescape.Register:CLIENT_FUNCTION"

[tool.setuptools.dynamic]
version = {attr = "apeescape.Register:VERSION"}
