[project]
name = "apsudoku"
version = "1.0.0"
description = "Play a little Sudoku while you're in BK mode to maybe get some useful hints"
authors = [
    {name = "EmilyV99"}
]
requires-python = ">=3.12"

[project.entry-points."mwgg.plugins"]
"apsudoku.WorldClass" = "apsudoku.Register:WORLD_CLASS"
"apsudoku.WebWorldClass" = "apsudoku.Register:WEB_WORLD_CLASS"
"apsudoku.Client" = "apsudoku.Register:CLIENT_FUNCTION"
