[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "apsudoku"
dynamic = ["version"]
description = "Sudoku"
authors = [
    {name = "EmilyV99"}
]
license = "MIT"
classifiers = [
    "Private :: Do Not Upload"
]
requires-python = ">=3.12"

[project.entry-points."mwgg.plugins"]
"apsudoku.WorldClass" = "apsudoku.Register:WORLD_CLASS"
"apsudoku.WebWorldClass" = "apsudoku.Register:WEB_WORLD_CLASS"
"apsudoku.Client" = "apsudoku.Register:CLIENT_FUNCTION"

[tool.setuptools.dynamic]
version = {attr = "Constants.VERSION"}
