[project]
name = "aquaria"
version = "1.0.0"
description = "Aquaria is a side-scrolling action-adventure game. It follows Naija, an aquatic humanoid woman, as she explores the underwater world of Aquaria. Along her journey, she learns about the history of the world she inhabits as well as her own past. The gameplay focuses on a combination of swimming, singing, and combat, through which Naija can interact with the world. Her songs can move items, affect plants and animals, and change her physical appearance into other forms that have different abilities, like firing projectiles at hostile creatures, or passing through barriers inaccessible to her in her natural form. From: https://en.wikipedia.org/wiki/Aquaria_(video_game)"
authors = [
    {name = "tioui"}
]
requires-python = ">=3.12"

[project.entry-points."mwgg.plugins"]
"aquaria.WorldClass" = "aquaria.Register:WORLD_CLASS"
"aquaria.WebWorldClass" = "aquaria.Register:WEB_WORLD_CLASS"
"aquaria.Client" = "aquaria.Register:CLIENT_FUNCTION"
