[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "aquaria"
dynamic = ["version"]
description = "Aquaria"
authors = [
    {name = "tioui"}
]
license = "MIT"
license_files = [
    "LICENSE"
]
classifiers = [
    "Private :: Do Not Upload"
]
requires-python = ">=3.12"

[project.entry-points."mwgg.plugins"]
"aquaria.WorldClass" = "aquaria.Register:WORLD_CLASS"
"aquaria.WebWorldClass" = "aquaria.Register:WEB_WORLD_CLASS"
"aquaria.Client" = "aquaria.Register:CLIENT_FUNCTION"

[tool.setuptools.dynamic]
version = {attr = "aquaria.Register:VERSION"}
