[project]
name = "archipidle"
version = "1.0.0"
description = "An idle game which sends a check every thirty to sixty seconds, up to two hundred checks."
authors = [
    {name = "LegendaryLinux"}
]
requires-python = ">=3.12"

[project.entry-points."mwgg.plugins"]
"archipidle.WorldClass" = "archipidle.Register:WORLD_CLASS"
"archipidle.WebWorldClass" = "archipidle.Register:WEB_WORLD_CLASS"
"archipidle.Client" = "archipidle.Register:CLIENT_FUNCTION"
