[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "archipidle"
dynamic = ["version"]
description = "ArchipIDLE"
authors = [
    {name = "LegendaryLinux"}
]
license = "MIT"
license_files = [
    "LICENSE"
]
classifiers = [
    "Private :: Do Not Upload"
]
requires-python = ">=3.12"

[project.entry-points."mwgg.plugins"]
"archipidle.WorldClass" = "archipidle.Register:WORLD_CLASS"
"archipidle.WebWorldClass" = "archipidle.Register:WEB_WORLD_CLASS"
"archipidle.Client" = "archipidle.Register:CLIENT_FUNCTION"

[tool.setuptools.dynamic]
version = {attr = "archipidle.Register:VERSION"}
