[project]
name = "aus"
version = "1.0.0"
description = "A freeware metroidvania game created by Maddy Thorson chronicling the travels of an adventurous egg."
authors = [
    {name = "ThatOneGuy27"}
]
requires-python = ">=3.12"

[project.entry-points."mwgg.plugins"]
"aus.WorldClass" = "aus.Register:WORLD_CLASS"
"aus.WebWorldClass" = "aus.Register:WEB_WORLD_CLASS"
"aus.Client" = "aus.Register:CLIENT_FUNCTION"
