[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "aus"
dynamic = ["version"]
description = "An Untitled Story"
authors = [
    {name = "ThatOneGuy27"}
]
license = "MIT"
classifiers = [
    "Private :: Do Not Upload"
]
requires-python = ">=3.12"

[project.entry-points."mwgg.plugins"]
"aus.WorldClass" = "aus.Register:WORLD_CLASS"
"aus.WebWorldClass" = "aus.Register:WEB_WORLD_CLASS"
"aus.Client" = "aus.Register:CLIENT_FUNCTION"

[tool.setuptools.dynamic]
version = {attr = "aus.Register:VERSION"}
