[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "balatro"
dynamic = ["version"]
description = "Balatro"
authors = [
    {name = "Burndi"}
]
license = "MIT"
license_files = [
    "LICENSE"
]
classifiers = [
    "Private :: Do Not Upload"
]
requires-python = ">=3.12"

[project.entry-points."mwgg.plugins"]
"balatro.WorldClass" = "balatro.Register:WORLD_CLASS"
"balatro.WebWorldClass" = "balatro.Register:WEB_WORLD_CLASS"
"balatro.Client" = "balatro.Register:CLIENT_FUNCTION"

[tool.setuptools.dynamic]
version = {attr = "balatro.Register:VERSION"}
