[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "banjo_tooie"
dynamic = ["version"]
description = "Banjo-Tooie is a single-player platform game in which the protagonists are controlled from a third-person perspective."
authors = [
    {name = "jjjj12212"}
]
license = "MIT"
classifiers = [
    "Private :: Do Not Upload"
]
requires-python = ">=3.12"

[project.entry-points."mwgg.plugins"]
"banjo_tooie.WorldClass" = "banjo_tooie.Register:WORLD_CLASS"
"banjo_tooie.WebWorldClass" = "banjo_tooie.Register:WEB_WORLD_CLASS"
"banjo_tooie.Client" = "banjo_tooie.Register:CLIENT_FUNCTION"

[tool.setuptools.dynamic]
version = {attr = "banjo_tooie.Register:VERSION"}
