[project]
name = "blasphemous"
version = "1.0.0"
description = "Blasphemous is a challenging Metroidvania set in the cursed land of Cvstodia. Play as the Penitent One, trapped in an endless cycle of death and rebirth, and free the world from its terrible fate in your quest to break your eternal damnation!"
authors = [
    {name = "TRPG"}
]
requires-python = ">=3.12"

[project.entry-points."mwgg.plugins"]
"blasphemous.WorldClass" = "blasphemous.Register:WORLD_CLASS"
"blasphemous.WebWorldClass" = "blasphemous.Register:WEB_WORLD_CLASS"
"blasphemous.Client" = "blasphemous.Register:CLIENT_FUNCTION"
