[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "blasphemous"
dynamic = ["version"]
description = "Blasphemous"
authors = [
    {name = "TRPG"}
]
license = "MIT"
license_files = [
    "LICENSE"
]
classifiers = [
    "Private :: Do Not Upload"
]
requires-python = ">=3.12"

[project.entry-points."mwgg.plugins"]
"blasphemous.WorldClass" = "blasphemous.Register:WORLD_CLASS"
"blasphemous.WebWorldClass" = "blasphemous.Register:WEB_WORLD_CLASS"
"blasphemous.Client" = "blasphemous.Register:CLIENT_FUNCTION"

[tool.setuptools.dynamic]
version = {attr = "blasphemous.Register:VERSION"}
