[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "brotato"
dynamic = ["version"]
description = "Brotato"
authors = [
    {name = "RampagingHippy"}
]
license = "MIT"
classifiers = [
    "Private :: Do Not Upload"
]
requires-python = ">=3.12"

[project.entry-points."mwgg.plugins"]
"brotato.WorldClass" = "brotato.Register:WORLD_CLASS"
"brotato.WebWorldClass" = "brotato.Register:WEB_WORLD_CLASS"
"brotato.Client" = "brotato.Register:CLIENT_FUNCTION"

[tool.setuptools.packages.find]
where = ["."]
include = ["brotato*", "brotato"]
exclude = ["brotato/test*"]
namespaces = false

[tool.setuptools.dynamic]
version = {attr = "Constants.VERSION"}
