[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "bumpstik"
dynamic = ["version"]
description = "Bumper Stickers"
authors = [
    {name = "FelicitusNeko"}
]
license = "MIT"
classifiers = [
    "Private :: Do Not Upload"
]
requires-python = ">=3.12"

[project.entry-points."mwgg.plugins"]
"bumpstik.WorldClass" = "bumpstik.Register:WORLD_CLASS"
"bumpstik.WebWorldClass" = "bumpstik.Register:WEB_WORLD_CLASS"
"bumpstik.Client" = "bumpstik.Register:CLIENT_FUNCTION"

[tool.setuptools.packages.find]
where = ["."]
include = ["bumpstik*", "bumpstik"]
exclude = ["*test*", "test*"]
namespaces = false

[tool.setuptools.dynamic]
version = {attr = "bumpstik.Constants.VERSION"}
