[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "candybox2"
dynamic = ["version"]
description = "Candy Box 2"
authors = [
    {name = "Victor Tran"}
]
license = "MIT"
classifiers = [
    "Private :: Do Not Upload"
]
requires-python = ">=3.12"

[project.entry-points."mwgg.plugins"]
"candybox2.WorldClass" = "candybox2.Register:WORLD_CLASS"
"candybox2.WebWorldClass" = "candybox2.Register:WEB_WORLD_CLASS"
"candybox2.Client" = "candybox2.Register:CLIENT_FUNCTION"

[tool.setuptools.dynamic]
version = {attr = "candybox2.Register:VERSION"}
