[project]
name = "cat_quest"
version = "1.0.0"
description = "Cat Quest is a small open world ARPG set in a cute world full of cats and cat puns. Slash and dodge enemies while completing quests, dungeons and obtaining new gear."
authors = [
    {name = "Nikkilite"}
]
requires-python = ">=3.12"

[project.entry-points."mwgg.plugins"]
"cat_quest.WorldClass" = "cat_quest.Register:WORLD_CLASS"
"cat_quest.WebWorldClass" = "cat_quest.Register:WEB_WORLD_CLASS"
"cat_quest.Client" = "cat_quest.Register:CLIENT_FUNCTION"
