[project]
name = "celeste64"
dynamic = ["version"]
description = "Celeste 64"
authors = [
    {name = "PoryGone"}
]
requires-python = ">=3.12"
]
license = "MIT"
classifiers = [
    "Private :: Do Not Upload"
]
requires-python = ">=3.12"

[project.entry-points."mwgg.plugins"]
"celeste64.WorldClass" = "celeste64.Register:WORLD_CLASS"
"celeste64.WebWorldClass" = "celeste64.Register:WEB_WORLD_CLASS"
"celeste64.Client" = "celeste64.Register:CLIENT_FUNCTION"

[tool.setuptools.dynamic]
version = {attr = "Constants.VERSION"}