[project]
name = "celeste64"
dynamic = ["version"]
description = "Celeste 64"
authors = [
    {name = "PoryGone"}
]
requires-python = ">=3.12"
classifiers = [
    "Private :: Do Not Upload"
]
requires-python = ">=3.12"

[project.entry-points."mwgg.plugins"]
"celeste64.WorldClass" = "celeste64.Register:WORLD_CLASS"
"celeste64.WebWorldClass" = "celeste64.Register:WEB_WORLD_CLASS"
"celeste64.Client" = "celeste64.Register:CLIENT_FUNCTION"

[tool.setuptools.packages.find]
where = ["."]
include = ["celeste64*", "celeste64"]
exclude = ["celeste64/test*"]
namespaces = false

[tool.setuptools.dynamic]
version = {attr = "Constants.VERSION"}