[project]
name = "chainedechoes"
version = "1.0.0"
description = "Chained Echoes world integration for MultiworldGG. Regions and locations are created in `create_regions` (including a call to `create_locations`). Items are created in `create_items`."
authors = [
    {name = "SergioAlonso"}
]
requires-python = ">=3.12"

[project.entry-points."mwgg.plugins"]
"chainedechoes.WorldClass" = "chainedechoes.Register:WORLD_CLASS"
"chainedechoes.WebWorldClass" = "chainedechoes.Register:WEB_WORLD_CLASS"
"chainedechoes.Client" = "chainedechoes.Register:CLIENT_FUNCTION"
