[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "chainedechoes"
dynamic = ["version"]
description = "Chained Echoes"
authors = [
    {name = "SergioAlonso"}
]
license = "MIT"
classifiers = [
    "Private :: Do Not Upload"
]
requires-python = ">=3.12"

[project.entry-points."mwgg.plugins"]
"chainedechoes.WorldClass" = "chainedechoes.Register:WORLD_CLASS"
"chainedechoes.WebWorldClass" = "chainedechoes.Register:WEB_WORLD_CLASS"
"chainedechoes.Client" = "chainedechoes.Register:CLIENT_FUNCTION"

[tool.setuptools.dynamic]
version = {attr = "chainedechoes.Register:VERSION"}
