[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "chatipelago"
dynamic = ["version"]
description = "Chat plays MultiworldGG!"
authors = [
    {name = "Delilah, Dranzior, LMarioza"}
]
license = "MIT"
license_files = [
    "LICENSE"
]
classifiers = [
    "Private :: Do Not Upload"
]
requires-python = ">=3.12"

[project.entry-points."mwgg.plugins"]
"chatipelago.WorldClass" = "chatipelago.Register:WORLD_CLASS"
"chatipelago.WebWorldClass" = "chatipelago.Register:WEB_WORLD_CLASS"
"chatipelago.Client" = "chatipelago.Register:CLIENT_FUNCTION"

[tool.setuptools.dynamic]
version = {attr = "chatipelago.Register:VERSION"}
