[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "chatipelago"
dynamic = ["version"]
description = "MultiWorld: Chatipelago"
authors = [
    {name = "Delilah, Dranzior, LMarioza"}
]
classifiers = [
    "Private :: Do Not Upload"
]
requires-python = ">=3.12"

[project.entry-points."mwgg.plugins"]
"chatipelago.WorldClass" = "chatipelago.Register:WORLD_CLASS"
"chatipelago.WebWorldClass" = "chatipelago.Register:WEB_WORLD_CLASS"
"chatipelago.Client" = "chatipelago.Register:CLIENT_FUNCTION"

[tool.setuptools.packages.find]
where = ["."]
include = ["chatipelago*", "chatipelago"]
exclude = ["*test*", "test*"]
namespaces = false

[tool.setuptools.dynamic]
version = {attr = "chatipelago.Constants.VERSION"}
