[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "checksfinder"
dynamic = ["version"]
description = "ChecksFinder"
authors = [
    {name = "SunCatMC"}
]
license = "MIT"
license_files = [
    "LICENSE"
]
classifiers = [
    "Private :: Do Not Upload"
]
requires-python = ">=3.12"

[project.entry-points."mwgg.plugins"]
"checksfinder.WorldClass" = "checksfinder.Register:WORLD_CLASS"
"checksfinder.WebWorldClass" = "checksfinder.Register:WEB_WORLD_CLASS"
"checksfinder.Client" = "checksfinder.Register:CLIENT_FUNCTION"

[tool.setuptools.dynamic]
version = {attr = "checksfinder.Register:VERSION"}
