[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "civ_6"
dynamic = ["version"]
description = "Civilization VI"
authors = [
    {name = "hesto2"}
]
license = "MIT"
license_files = [
    "LICENSE.md"
]
classifiers = [
    "Private :: Do Not Upload"
]
requires-python = ">=3.12"

[project.entry-points."mwgg.plugins"]
"civ_6.WorldClass" = "civ_6.Register:WORLD_CLASS"
"civ_6.WebWorldClass" = "civ_6.Register:WEB_WORLD_CLASS"
"civ_6.Client" = "civ_6.Register:CLIENT_FUNCTION"

[tool.setuptools.dynamic]
version = {attr = "Constants.VERSION"}
